fix(maintainability): clean up reliability issues