@@ -16,7 +16,6 @@ import java.nio.file.Path;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -215,7 +214,7 @@ public class MediaService {
                         return segMs < endMs && (segMs + HLS_SEGMENT_LENGTH * 1000) > startMs;
                     })
                     .sorted(Comparator.comparingLong(this::parseTimestampMs))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
